<resources>
    <string name="app_name">CarpoolApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CarpoolApp</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="publicar">Publicar</string>
    <string name="procurar">Procurar</string>
    <string name="mensagens">Mensagens</string>
    <string name="hist_rico">Histórico</string>
    <string name="perfil">Perfil</string>
    <string name="para">Para:</string>
    <string name="de">De:</string>
    <string name="data_e_hora_de_partida">Hora de Partida:</string>
    <string name="dd_mm_aaaa">dd/mm/aaaa</string>
    <string name="hh_mm">hh:mm</string>
    <string name="lugares_dipon_veis">Lugares diponíveis:</string>
    <string name="pre_o_por_passageiro">Preço por passageiro:</string>
    <string name="coment_rios">Comentários:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="procurar_button">Procurar</string>
    <string name="resultados_activity">Resultados</string>
    <string name="data_picker_button">Selecione uma Data</string>
    <string name="dataPicker">dataPicker</string>
    <string name="data_button">Selecione uma Data</string>
    <string name="pick_hora">Selecione uma hora</string>
    <string name="timePicker">timePicker</string>
    <string name="update_perfil">Editar Perfil</string>
    <string name="imagemuser">ImagemUser</string>
    <string name="data">Data:</string>
    <string name="partilhar_localiza_o">Partilhar Localização</string>
    <string name="tracking_viagem">Tracking Viagem</string>
    <string name="viagens_reservadas">Viagens reservadas</string>
</resources>
