<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_publicar"
            android:icon="@drawable/ic_create_black_24dp"
            android:title="@string/publicar" />
        <item
            android:id="@+id/nav_procurar"
            android:icon="@drawable/ic_procurar"
            android:title="@string/procurar" />
        <item
            android:id="@+id/nav_viagens_resrvadas"
            android:icon="@drawable/ic_viagens_reservadas"
            android:title="@string/viagens_reservadas" />
        <item
            android:id="@+id/nav_localizacao"
            android:icon="@drawable/ic_my_location_black_24dp"
            android:title="@string/partilhar_localiza_o" />
        <item
            android:id="@+id/nav_tracking"
            android:icon="@drawable/ic_tracking"
            android:title="@string/tracking_viagem" />
        <item
            android:id="@+id/nav_historico"
            android:icon="@drawable/ic_historico"
            android:title="@string/hist_rico" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/perfil" />
    </group>

</menu>
