<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalhesViagem">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textPPartidaInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/de"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textPontoPartida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textPChegadaInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/para"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textDataInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/data"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textHoraInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/data_e_hora_de_partida"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textNumero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textLugaresInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/lugares_dipon_veis"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textLugares"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textPrecoInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/pre_o_por_passageiro"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textPreco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textComentariosInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/coment_rios"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textComentarios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="   \24dp"
                android:textSize="18sp" />


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>