<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalhesViagem2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textPPartidaInfo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/de"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textPontoPartida2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textPChegadaInfo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/para"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textPontoChegada2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textDataInfo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/data"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textData2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textHoraInfo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/data_e_hora_de_partida"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textHora2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textLugaresInfo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/lugares_dipon_veis"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textLugaresViagem2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textPrecoInfo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/pre_o_por_passageiro"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textPrecoViagem2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textComentariosInfo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/coment_rios"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textComentarios2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="Não há comentários relevantes"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonReservar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="reservarViagem"
                android:text="@string/btn_reservar"
                tools:layout_editor_absoluteX="148dp"
                tools:layout_editor_absoluteY="463dp" />


        </LinearLayout>
    </ScrollView>



</android.support.constraint.ConstraintLayout>